# ccjournal

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README_ja.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: configuration.md  configuration_ja.md
src/ccjournal/: __init__.py  cli.py  config.py  daemon.py  parser.py  sync.py
tests/: __init__.py  test_config.py  test_daemon.py  test_parser.py  test_sync.py
