[project]
name = "ccjournal"
version = "0.3.0"
description = "Sync Claude Code conversation logs to Git repository"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "TAKEDA-Takashi" }
]
keywords = ["claude", "claude-code", "logging", "sync", "git"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pyright>=1.1",
    "ruff>=0.4",
]

[project.scripts]
ccjournal = "ccjournal.cli:main"

[project.urls]
Homepage = "https://github.com/TAKEDA-Takashi/ccjournal"
Repository = "https://github.com/TAKEDA-Takashi/ccjournal"
Issues = "https://github.com/TAKEDA-Takashi/ccjournal/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ccjournal"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=ccjournal --cov-report=term-missing"
